# worldweaver-agent

./: .gitignore  AGENT_ARCHITECTURE_PLAN.md  README.md  pyproject.toml
docs/story_outlines/: castle_exploration_outline.md
scripts/: run_demo.py  run_web_demo.py  run_web_demo_openai.py
server/: qwen_perception_server.py  qwen_planning_server.py
src/worldweaver_agent/: __init__.py  backends.py  frame_planning.py  interaction.py  memory.py  model_presets.py  narration.py  narrative_planning.py  orchestrator.py  perception.py  planning.py  rendering.py  retrieval.py  schemas.py
web/: index.html  index_openai.html
