[project]
name = "worldweaver-agent"
version = "0.1.0"
description = "A standalone scaffold for interactive narrative image generation and progressive user modeling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=2.21.0",
    "pydantic>=2.9.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
